Subir todos los archivos y cambios del proyecto

--- a/ui/auth/index.html
+++ b/ui/auth/index.html
@@ -16,7 +16,7 @@
         <form id="loginForm">
             <div class="input-group">
                 <i>👤</i>
-                <input type="text" id="username" placeholder="Nombre de usuario">
+                <input type="email" id="username" placeholder="Correo electrónico">
             </div>
             <div class="input-group">
                 <i>🔒</i>
