--- a/ui/register/index.html
+++ b/ui/register/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="input-group">
                 <i>⭐</i>
-                <label for="role" style="display:none;">Tipo de cuenta:</label>
+                <label for="role">Tipo de cuenta:</label>
                 <select id="role" name="role" required>
                     <option value="user">Usuario</option>
                     <option value="admin">Administrador</option>
