Subir todos los archivos y cambios del proyecto

--- a/ui/dashboard/index.html
+++ b/ui/dashboard/index.html
@@ -11,7 +11,8 @@
     <h1>Panel de Control</h1>
     <div class="panel-buttons">
       <a href="../heroes/index.html" id="btnHeroes" class="panel-link"><button>Gestor de Héroes</button></a>
-      <!-- Aquí puedes agregar más botones para otras interfaces -->
+      <a href="../villains/index.html" id="btnVillains" class="panel-link"><button>Gestor de Villanos</button></a>
+      <a href="../teamBattles/index.html" id="btnTeamBattles" class="panel-link"><button>Batallas por Equipos</button></a>
     </div>
     <div id="panelContent"></div>
   </div>
