--- a/ui/heroes/index.html
+++ b/ui/heroes/index.html
@@ -19,6 +19,7 @@
     <div id="heroesList"></div>
     <div id="heroFormContainer" class="modal hidden"></div>
     <div id="heroDetailContainer" class="modal hidden"></div>
+    <button id="logoutBtn" style="position:absolute;top:20px;right:20px;background:#ff5252;color:#fff;border:none;padding:0.5rem 1rem;border-radius:6px;cursor:pointer;z-index:1000;">Cerrar sesión</button>
   </div>
   <script type="module" src="manager.js"></script>
 </body>
