--- a/ui/battle/battle.html
+++ b/ui/battle/battle.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Batalla - Fighting Game</title>
-    <link rel="stylesheet" href="./ui/battle/base-style.css">
-    <link rel="stylesheet" href="./ui/battle/style.css">
+    <link rel="stylesheet" href="base-style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="gameContainer">
@@ -21,6 +21,6 @@
             </div>
         </div>
     </div>
-    <script type="module" src="./core/Game.js"></script>
+    <script type="module" src="../../core/Game.js"></script>
 </body>
 </html>
