--- a/ui/battle/battle.html
+++ b/ui/battle/battle.html
@@ -12,14 +12,7 @@
     <div id="gameContainer">
         <canvas id="bgCanvas"></canvas>
         <canvas id="spriteCanvas"></canvas>
-        <div id="ui">
-            <div id="player1Health" class="health-bar">
-                <div id="player1Bar" class="health-fill"></div>
-            </div>
-            <div id="player2Health" class="health-bar">
-                <div id="player2Bar" class="health-fill"></div>
-            </div>
-        </div>
+        <div id="ui"></div>
     </div>
     <script type="module" src="../../core/Game.js"></script>
 </body>
