--- a/ui/register/index.html
+++ b/ui/register/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro - Portal de Energía</title>
-    <!-- El CSS se inyecta dinámicamente desde el SPA -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../auth/style.css">
 </head>
 <body>
     <div id="scene-container"></div>
