--- a/ui/heroes/index.html
+++ b/ui/heroes/index.html
@@ -18,7 +18,11 @@
 </head>
 <body>
   <div class="container">
-    <h1>Gestor de Héroes</h1>
+    <div class="header-controls">
+      <button id="backToDashboard" class="back-btn">← Volver al Dashboard</button>
+      <h1>Gestor de Héroes</h1>
+      <button id="logoutBtn" class="logout-btn">Cerrar sesión</button>
+    </div>
     <div class="search-bar">
       <input type="text" id="searchCity" placeholder="Buscar por ciudad">
       <button id="btnSearchCity">Buscar ciudad</button>
@@ -29,7 +33,6 @@
     <div id="heroesList"></div>
     <div id="heroFormContainer" class="modal hidden"></div>
     <div id="heroDetailContainer" class="modal hidden"></div>
-    <button id="logoutBtn" style="position:absolute;top:20px;right:20px;background:#ff5252;color:#fff;border:none;padding:0.5rem 1rem;border-radius:6px;cursor:pointer;z-index:1000;">Cerrar sesión</button>
   </div>
   <script type="module" src="manager.js"></script>
   <script type="module">
